CSS fixes for messages.html. Includes margins, custom-scrollbar, message forms, chatdiv, and more.
Everything should line up better.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,8 +4,8 @@ html {
   height: 100vh;
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
-  overflow-y: hidden;
+  overflow-x: hidden !important;
+  overflow-y: hidden !important; /* Prevent scrolling from appearing unless its children */
 }
 
 .hidden {
