--- a/src/app/messages/messages.component.scss
+++ b/src/app/messages/messages.component.scss
@@ -1,13 +1,26 @@
-$base-width: 95%;
+#messagesDiv {
+  width: 89vw;
+  height: 99vh;
+  overflow-y: hidden;
+  overflow-x: hidden;
+  margin: 5px;
+  padding: 0;
+}
 
-.message-form {
-  min-width: 1px;
-  min-height: 1px;
+#messageFormDiv {
   position: -webkit-sticky;
   position: sticky;
-  top: 0;
   z-index: 9999;
-  margin-left: 20px;
+  margin: inherit;
+  height: 5vh;
+  margin-left: 3px;
+}
+
+#chatDiv {
+  display: inline-block;
+  width: 89vw;
+  height: 93vh;
+  overflow: auto;
 }
 
 .message-full-width {
@@ -19,36 +32,24 @@ $base-width: 95%;
   margin: 3px;
 }
 
-#chatDiv {
-  display: inline-block;
-  width: $base-width;
-  height: 900px;
-  overflow: auto;
-}
-
-#messagesDiv {
-  overflow-y: hidden;
-  overflow-x: hidden;
-}
-
 .custom-scrollbar {
-  margin-left: 22px;
   float: left;
   height: 150px;
   width: 10px;
   background: #f5f5f5;
   overflow-y: scroll;
-  margin-bottom: 25px;
+  // margin-bottom: 25px;
 }
 
 .custom-scrollbar::-webkit-scrollbar,
 .custom-scrollbar::-webkit-scrollbar-track {
-  border-radius: 10px;
+  border-radius: 5px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: #f5f5f5;
 }
 .custom-scrollbar::-webkit-scrollbar-thumb {
-  border-radius: 10px;
+  border-radius: 5px;
   background-color: #000000;
-  border: 2px solid #555555;
+  border: 1px solid #555555;
 }
